# example/routes.js
@@ -3,7 +3,16 @@
 
 // Sets up the routes.
 module.exports.setup = function(app) {
-
+  /**
+   * @swagger
+   * parameter:
+   *   username:
+   *     name: username
+   *     description: Username to use for login.
+   *     in: formData
+   *     required: true
+   *     type: string
+   */
 
   /**
    * @swagger
@@ -40,11 +49,7 @@ module.exports.setup = function(app) {
    *     produces:
    *       - application/json
    *     parameters:
-   *       - name: username
-   *         description: Username to use for login.
-   *         in: formData
-   *         required: true
-   *         type: string
+   *       - $ref: '#/parameters/username'
    *       - name: password
    *         description: User's password.
    *         in: formData
