# test/swagger-spec.json
@@ -26,11 +26,7 @@
         ],
         "parameters": [
           {
-            "name": "username",
-            "description": "Username to use for login.",
-            "in": "formData",
-            "required": true,
-            "type": "string"
+            "$ref": "#/parameters/username"
           },
           {
             "name": "password",
@@ -100,5 +96,16 @@
         }
       }
     }
-  }
+  },
+  "responses": {},
+  "parameters": {
+    "username": {
+      "name": "username",
+      "description": "Username to use for login.",
+      "in": "formData",
+      "required": true,
+      "type": "string"
+    }
+  },
+  "securityDefinitions": {}
 }
